Completed to end of lecture 39 - change password.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-Flask==0.10.1
-Flask-Script==2.0.5
-pymongo==2.9
-mongoengine==0.8
-flask-mongoengine==0.7.4
-Flask-WTF==0.12
-py-bcrypt==0.4
 blinker==1.4
+boto3==1.3.0
+botocore==1.4.93
+docutils==0.14
+Flask==0.10.1
+flask-mongoengine==0.7.4
+Flask-Script==2.0.5
+Flask-WTF==0.12
+itsdangerous==0.24
+Jinja2==2.9.6
+jmespath==0.9.3
+MarkupSafe==1.0
+mongoengine==0.8.0
+py-bcrypt==0.4
+pymongo==2.9
+python-dateutil==2.6.1
+six==1.11.0
+Werkzeug==0.12.2
+WTForms==2.1
